<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="474dp"
        android:layout_height="420dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842"
        app:srcCompat="@drawable/circle" />

    <EditText
        android:id="@+id/firstName"
        style="@android:style/Widget.EditText"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="490dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/prompt_firstName"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/LastName"
        style="@android:style/Widget.EditText"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="440dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:hint="@string/prompt_LastName"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:selectAllOnFocus="true"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/username"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="250dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/RobotoEditTextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/email"
        style="@android:style/Widget.EditText"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="223dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:selectAllOnFocus="true"
        app:fontFamily="Roboto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="301dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="83dp"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        app:fontFamily="Roboto"
        android:background="@drawable/border"
        android:hint="@string/prompt_MobileNumber"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/password"
        android:layout_width="301dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="280dp"
        android:autofillHints=""
        app:fontFamily="Roboto"
        android:background="@drawable/border"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="301dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="429dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="72dp"
        android:autofillHints=""
        app:fontFamily="Roboto"
        android:background="@drawable/border"
        android:hint="@string/prompt_ConfirmPassword"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="641dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="5dp"
        android:background="@color/login1"
        android:enabled="false"
        android:text="@string/action_sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="404dp"
        android:background="@drawable/profile_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />


</androidx.constraintlayout.widget.ConstraintLayout>