<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.postRegInst"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="454dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome_reg"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="388dp"
        android:layout_height="440dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="178dp"
                    android:layout_marginTop="20dp"
                    android:padding="20dp"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    app:srcCompat="@drawable/handblack" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingLeft="30dp"
                    android:paddingTop="0dp"
                    android:text="@string/step1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_light"
                    android:paddingLeft="30dp"
                    android:paddingTop="0dp"
                    android:paddingRight="30dp"
                    android:text="@string/step1desc"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:paddingLeft="30dp"
                        android:paddingTop="10dp"
                        android:paddingRight="30dp"
                        android:text="@string/step2"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="@string/step2desc"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="720dp"
                        android:layout_height="21dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/next"
                        tools:layout_editor_absoluteY="104dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>