<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/notificationTitle1"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="195dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="42dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/notification_title1"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/charityTitle"
                android:layout_width="163dp"
                android:layout_height="58dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/charity_name"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.859"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.625" />

            <TextView
                android:id="@+id/charityEmail"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="161dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/charity_email"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.585"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/redCrossLogo"
                android:layout_width="65dp"
                android:layout_height="54dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="130dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/redcross" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>